[package]
name = "crust"
version = "0.1.0"
edition = "2018"
description = "Framework for Building distributed web services using Rust."
license = "MIT"
keywords = ["web","distributedsytems","rustframework"]
categories = ["web-programming","web-programming::http-server","web-programming::http-server"]
exclude = ["/node_modules", "/target", ".*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
